# discord-everything-bot

./: README.md  discord-bot.code-workspace
server/: .gitignore  Cargo.toml  db.db  db.db-shm  db.db-wal
server/src/: event_runner.rs  main.rs
server/src/api/: guild.rs  mod.rs  recover.rs  util.rs
server/src/api/controllers/: guild.rs  mod.rs  welcome.rs
server/src/api/models/: welcome.rs
server/src/api/routes/: guild.rs  mod.rs  welcome.rs
server/src/bot/: event_handler.rs  mod.rs
server/src/bot/db/: mod.rs
server/src/bot/db/queries/: mod.rs  reaction_roles.rs
server/src/db/: mod.rs
server/src/db/queries/: guild.rs  mod.rs  poll.rs  reaction_roles.rs  welcome.rs
server/src/models/: embed.rs
server/src/modules/: mod.rs  reaction_roles.rs  slash_commands.rs  welcome.rs
server/src/modules/poll/: mod.rs  slash_commands.rs
server/src/util/: cdn.rs
ui/: .gitignore  .prettierignore  .prettierrc  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
ui/src/: app.html  app.postcss
ui/src/components/: CommandCard.svelte  CommandCardSection.svelte  LoadingSpinner.svelte  PluginTile.svelte  Snackbar.svelte  Tooltip.svelte
ui/src/components/forms/: EmbedFieldGroup.svelte  FieldArray.svelte  FieldCondition.svelte  ImageUpload.svelte  TextArea.svelte
ui/src/components/header/: header.svelte
ui/src/http/: active-guild.ts  util.ts  welcome.ts
ui/src/models/: embed.ts  validators.ts
ui/src/routes/: __layout.svelte  index.svelte
ui/src/util/: active-path.ts
ui/src/utils/: active-path.ts
(+11 files in other folders)
